--- a/cloudfoundry-caldecott-lib/pom.xml
+++ b/cloudfoundry-caldecott-lib/pom.xml
@@ -19,7 +19,7 @@
 
 	<properties>
 		<spring.framework.version>3.0.7.RELEASE</spring.framework.version>
-		<cf.client.lib.version>0.7.4</cf.client.lib.version>
+		<cf.client.lib.version>0.8.0.BUILD-SNAPSHOT</cf.client.lib.version>
 		<junit.version>4.8.2</junit.version>
 		<mockito.version>1.8.5</mockito.version>
 	</properties>
