--- a/cloudfoundry-caldecott-test/pom.xml
+++ b/cloudfoundry-caldecott-test/pom.xml
@@ -5,7 +5,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.cloudfoundry</groupId>
 	<artifactId>cloudfoundry-caldecott-test</artifactId>
-	<version>0.1.2</version>
+	<version>0.1.3.BUILD-SNAPSHOT</version>
 	<packaging>jar</packaging>
 	<name>Tests for Java Client for Caldecott access</name>
 
