--- a/cloudfoundry-caldecott-lib/pom.xml
+++ b/cloudfoundry-caldecott-lib/pom.xml
@@ -5,7 +5,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.cloudfoundry</groupId>
 	<artifactId>cloudfoundry-caldecott-lib</artifactId>
-	<version>0.1.3</version>
+	<version>0.1.4.BUILD-SNAPSHOT</version>
 	<packaging>jar</packaging>
 	<name>Client library to be used for Caldecott access</name>
 
