--- a/cloudfoundry-maven-plugin/pom.xml
+++ b/cloudfoundry-maven-plugin/pom.xml
@@ -141,7 +141,7 @@ Maven-based applications to Cloud Foundry instances.
 		<dependency>
 			<groupId>org.cloudfoundry</groupId>
 			<artifactId>cloudfoundry-client-lib</artifactId>
-			<version>0.8.2</version>
+			<version>0.8.3.BUILD-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.maven.wagon</groupId>
