--- a/cloudfoundry-client-lib/src/test/resources/log4j.properties
+++ b/cloudfoundry-client-lib/src/test/resources/log4j.properties
@@ -5,6 +5,7 @@ log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
 log4j.appender.stdout.layout.ConversionPattern=%d %p [%C %M] - <%m>%n
 
 log4j.category.org.springframework.web.client.RestTemplate=ERROR
+log4j.category.org.cloudfoundry.client.lib.rest.LoggingRestTemplate=ERROR
 log4j.logger.httpclient.wire=ERROR
 log4j.logger.httpclient.wire.content=ERROR
 
