--- a/cloudfoundry-client-lib/pom.xml
+++ b/cloudfoundry-client-lib/pom.xml
@@ -21,6 +21,7 @@
 		<spring.framework.version>3.0.7.RELEASE</spring.framework.version>
 		<spring.security.oauth.version>1.0.0.RELEASE</spring.security.oauth.version>
         <jetty.version>8.1.12.v20130726</jetty.version>
+        <byteman.version>2.1.3</byteman.version>
 	</properties>
 
 	<profiles>
@@ -139,6 +140,18 @@
             <artifactId>jetty-servlets</artifactId>
             <version>${jetty.version}</version>
             <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.jboss.byteman</groupId>
+            <artifactId>byteman-bmunit</artifactId>
+            <version>${byteman.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.sun</groupId>
+            <artifactId>tools</artifactId>
+            <version>1.6</version>
+            <scope>system</scope>
+            <systemPath>C:/Program Files/Java/jdk1.6.0_35/lib/tools.jar</systemPath>
         </dependency>
 		<dependency>
 			<groupId>log4j</groupId>
