--- a/integration-test/pom.xml
+++ b/integration-test/pom.xml
@@ -55,6 +55,11 @@
             <artifactId>spring-boot-starter</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <build>
