--- a/pom.xml
+++ b/pom.xml
@@ -44,7 +44,7 @@
         <protobuf.version>2.6.1</protobuf.version>
         <reactive-streams.version>1.0.0</reactive-streams.version>
         <reactor.version>2.1.0.BUILD-SNAPSHOT</reactor.version>
-        <spring-platform.version>1.1.4.RELEASE</spring-platform.version>
+        <spring-platform.version>2.0.0.RELEASE</spring-platform.version>
     </properties>
 
     <dependencyManagement>
@@ -53,6 +53,11 @@
                 <groupId>com.google.protobuf</groupId>
                 <artifactId>protobuf-java</artifactId>
                 <version>${protobuf.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>io.projectreactor</groupId>
+                <artifactId>reactor-core</artifactId>
+                <version>${reactor.version}</version>
             </dependency>
             <dependency>
                 <groupId>io.projectreactor</groupId>
