--- a/pom.xml
+++ b/pom.xml
@@ -57,7 +57,7 @@
         <okhttp.version>3.5.0</okhttp.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <reactor-addons.version>3.0.4.RELEASE</reactor-addons.version>
-        <reactor-core.version>3.0.4.RELEASE</reactor-core.version>
+        <reactor-core.version>3.0.5.BUILD-SNAPSHOT</reactor-core.version>
         <reactor-netty.version>0.6.0.RELEASE</reactor-netty.version>
         <wire.version>2.2.0</wire.version>
     </properties>
