--- a/pom.xml
+++ b/pom.xml
@@ -26,7 +26,7 @@
     <parent>
         <groupId>io.spring.platform</groupId>
         <artifactId>platform-bom</artifactId>
-        <version>2.0.8.RELEASE</version>
+        <version>Athens-SR2</version>
     </parent>
 
     <groupId>org.cloudfoundry</groupId>
@@ -50,11 +50,10 @@
         <assertj.version>3.6.1</assertj.version>
         <commons-compress.version>1.12</commons-compress.version>
         <immutables.version>2.3.10</immutables.version>
-        <jackson.version>2.8.5</jackson.version>
         <java-semver.version>0.9.0</java-semver.version>
         <jjwt.version>0.7.0</jjwt.version>
         <netty.version>4.1.6.Final</netty.version>
-        <okhttp.version>3.5.0</okhttp.version>
+        <okhttp3.version>3.5.0</okhttp3.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <reactor-addons.version>3.0.4.RELEASE</reactor-addons.version>
         <reactor-core.version>3.0.4.RELEASE</reactor-core.version>
@@ -70,14 +69,9 @@
                 <version>${java-semver.version}</version>
             </dependency>
             <dependency>
-                <groupId>com.fasterxml.jackson.datatype</groupId>
-                <artifactId>jackson-datatype-jdk8</artifactId>
-                <version>${jackson.version}</version>
-            </dependency>
-            <dependency>
                 <groupId>com.squareup.okhttp3</groupId>
                 <artifactId>mockwebserver</artifactId>
-                <version>${okhttp.version}</version>
+                <version>${okhttp3.version}</version>
             </dependency>
             <dependency>
                 <groupId>com.squareup.wire</groupId>
