--- a/pom.xml
+++ b/pom.xml
@@ -26,7 +26,7 @@
     <parent>
         <groupId>io.spring.platform</groupId>
         <artifactId>platform-bom</artifactId>
-        <version>Athens-SR3</version>
+        <version>Brussels-RELEASE</version>
     </parent>
 
     <groupId>org.cloudfoundry</groupId>
@@ -50,7 +50,6 @@
         <java-semver.version>0.9.0</java-semver.version>
         <jjwt.version>0.7.0</jjwt.version>
         <netty.version>4.1.8.Final</netty.version>
-        <okhttp3.version>3.6.0</okhttp3.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <reactor-addons.version>3.0.5.RELEASE</reactor-addons.version>
         <reactor-core.version>3.0.5.RELEASE</reactor-core.version>
