--- a/pom.xml
+++ b/pom.xml
@@ -95,6 +95,11 @@
                 <version>${reactor-netty.version}</version>
             </dependency>
             <dependency>
+                <groupId>org.apache.commons</groupId>
+                <artifactId>commons-compress</artifactId>
+                <version>${commons-compress.version}</version>
+            </dependency>
+            <dependency>
                 <groupId>org.assertj</groupId>
                 <artifactId>assertj-core</artifactId>
                 <version>${assertj.version}</version>
@@ -151,7 +156,7 @@
                     <version>2.10.4</version>
                     <configuration>
                         <links>
-                            <link>http://projectreactor.io/core/docs/api/</link>
+                            <link>http://projectreactor.io/docs/core/release/api/</link>
                         </links>
                         <quiet>true</quiet>
                     </configuration>
@@ -182,15 +187,12 @@
                     <artifactId>maven-surefire-plugin</artifactId>
                     <version>2.19.1</version>
                     <configuration>
-                        <includes>
-                            <include>**/*Test.java</include>
-                            <include>**/*Test$*.java</include>
-                        </includes>
                         <runOrder>random</runOrder>
                     </configuration>
                 </plugin>
             </plugins>
         </pluginManagement>
+
         <plugins>
             <plugin>
                 <groupId>org.jfrog.buildinfo</groupId>
@@ -284,6 +286,13 @@
                     </plugin>
                 </plugins>
             </build>
+        </profile>
+        <profile>
+            <id>test-service-broker</id>
+
+            <modules>
+                <module>test-service-broker</module>
+            </modules>
         </profile>
     </profiles>
 
