--- a/pom.xml
+++ b/pom.xml
@@ -49,11 +49,10 @@
         <immutables.version>2.4.3</immutables.version>
         <java-semver.version>0.9.0</java-semver.version>
         <jjwt.version>0.7.0</jjwt.version>
-        <netty.version>4.1.8.Final</netty.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <reactor-addons.version>3.0.5.RELEASE</reactor-addons.version>
         <reactor-core.version>3.0.5.RELEASE</reactor-core.version>
-        <reactor-netty.version>0.6.1.RELEASE</reactor-netty.version>
+        <reactor-netty.version>0.6.2.BUILD-SNAPSHOT</reactor-netty.version>
         <wire.version>2.2.0</wire.version>
     </properties>
 
