--- a/ci/promote-to-bintray.yml
+++ b/ci/promote-to-bintray.yml
@@ -4,8 +4,7 @@ platform: linux
 image_resource:
   type: docker-image
   source:
-    repository: openjdk
-    tag: 8-jdk-alpine
+    repository: cfje/cf-java-client
 
 inputs:
 - name: cf-java-client
