--- a/cloudfoundry-operations/pom.xml
+++ b/cloudfoundry-operations/pom.xml
@@ -83,6 +83,10 @@
             <scope>test</scope>
         </dependency>
         <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-logging</artifactId>
             <scope>test</scope>
@@ -105,7 +109,7 @@
                 <configuration>
                     <additionalparam>-Xdoclint:-missing</additionalparam>
                     <sourceFileExcludes>
-                        <exclude>**\/Default*.java</exclude>
+                        <exclude>**\/Default*.java,org.cloudfoundry.operations.util</exclude>
                     </sourceFileExcludes>
                 </configuration>
             </plugin>
